--- a/EducationPlatform/EducationPlatform.csproj
+++ b/EducationPlatform/EducationPlatform.csproj
@@ -49,6 +49,15 @@
       <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Syncfusion.Compression.Base, Version=20.1450.0.61, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
+      <HintPath>..\packages\Syncfusion.Pdf.AspNet.Mvc5.20.1.0.61\lib\net45\Syncfusion.Compression.Base.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.Licensing, Version=20.1450.0.61, Culture=neutral, PublicKeyToken=632609b4d040f6b4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Syncfusion.Pdf.AspNet.Mvc5.20.1.0.61\lib\net45\Syncfusion.Licensing.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.Pdf.Base, Version=20.1450.0.61, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
+      <HintPath>..\packages\Syncfusion.Pdf.AspNet.Mvc5.20.1.0.61\lib\net45\Syncfusion.Pdf.Base.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
@@ -126,6 +135,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Auth\InstitutionLogged.cs" />
     <Compile Include="Controllers\A_InstitutionController.cs" />
     <Compile Include="Controllers\A_MentorController.cs" />
     <Compile Include="Controllers\A_StudentController.cs" />
@@ -264,6 +274,10 @@
     <Content Include="Views\A_Institution\InstitutionStudentResult.cshtml" />
     <Content Include="Views\A_Institution\InstitutionOfferedCourse.cshtml" />
     <Content Include="Views\A_Institution\InstitutionSalesReport.cshtml" />
+    <Content Include="Views\A_Institution\InstitutionSeeNotice.cshtml" />
+    <Content Include="Views\A_Institution\InstitutionUpdateNotice.cshtml" />
+    <Content Include="Views\A_Institution\InstitutionViewOfferedCourse.cshtml" />
+    <Content Include="Views\A_Institution\InstitutionUpdateOfferedCourse.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
